#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([mocha], [1.0], [dobaw20@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([src/config.h])
AC_LANG_PUSH([C++])

AC_SUBST(CFLAGS)
if test "" = "$CFLAGS"; then
    CFLAGS=" "
fi

AC_SUBST(CXXFLAGS)
if test "" = "$CXXFLAGS"; then
    CXXFLAGS=" "
fi

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lboost_thread':
AC_CHECK_LIB([pthread],
        [main],
        [AC_DEFINE(HAVE_PTHREAD , 1) AC_SUBST(PTHREAD) PTHREAD=-lpthread],
        [AC_MSG_ERROR(thread library not found.)]
)

AC_MSG_CHECKING(for struct stat)
AC_CACHE_VAL(ac_cv_struct_stat,
AC_TRY_COMPILE([
#include <sys/stat.h>
#include <sys/types.h>],
[struct stat s],
ac_cv_struct_stat=yes,
ac_cv_struct_stat=no))

if test $ac_cv_struct_stat = yes; then
  AC_DEFINE(HAVE_STRUCT_STAT, [1], [Define to 1 if you have struct stat])
fi

AC_MSG_CHECKING(for struct _stat)
AC_CACHE_VAL(ac_cv_struct__stat,
AC_TRY_COMPILE([
#include <sys/stat.h>
#include <sys/types.h>],
[struct _stat s],
ac_cv_struct__stat=yes,
ac_cv_struct__stat=no))

if test $ac_cv_struct__stat = yes; then
  AC_DEFINE(HAVE_STRUCT__STAT, [1], [Define to 1 if you have struct _stat])
fi

AC_SUBST(LIBS)
# Checks for header files.
AC_CHECK_HEADERS([fcntl.h libintl.h stdlib.h string.h sys/file.h unistd.h boost/unordered_map.hpp windows.h io.h time.h sys/locking.h direct.h sys/inotify.h])

AC_CHECK_FUNCS(write _write, break)
AC_CHECK_FUNCS(read _read, break)
AC_CHECK_FUNCS(creat _creat, break)
AC_CHECK_FUNCS(close _close, break)
AC_CHECK_FUNCS(open _open, break)
AC_CHECK_FUNCS(flock _locking, break)
AC_CHECK_FUNCS(ctime64 _ctime64 ctime, break)
AC_CHECK_FUNCS(stat _stat, break)
AC_CHECK_FUNCS(realpath _fullpath , break)
AC_CHECK_FUNCS(mkdir _mkdir ,break)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([getcwd])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
