bin_PROGRAMS = mocha
AM_CFLAGS = -Wall -g -O0 -DHAVE_PTHREAD -fno-exceptions
AM_CXXFLAGS = $(AM_CFLAGS)
mocha_LDFLAGS = $(PTHREAD)
mocha_SOURCES = \
define.h\
unconfig.h\
useconfig.h\
ast/ast_foward_decl.h\
ast/ast.h\
ast/ast.cc\
ast/visitors/ast_transformer.cc\
ast/visitors/ast_transformer.h\
ast/visitors/utils/visitor_info.h\
ast/visitors/utils/visitor_info.cc\
ast/visitors/utils/processors/dsta_processor.h\
ast/visitors/utils/processors/dsta_processor.cc\
ast/visitors/utils/processors/iteration_processor.h\
ast/visitors/utils/processors/iteration_processor.cc\
ast/visitors/utils/processors/variable_processor.h\
ast/visitors/utils/processors/variable_processor.cc\
ast/visitors/utils/processors/class_processor.cc\
ast/visitors/utils/processors/class_processor.h\
ast/visitors/utils/processors/function_processor.cc\
ast/visitors/utils/processors/function_processor.h\
ast/visitors/utils/processors/fileroot_processor.cc\
ast/visitors/utils/processors/fileroot_processor.h\
ast/visitors/utils/processors/module_processor.cc\
ast/visitors/utils/processors/module_processor.h\
ast/visitors/utils/processors/export_processor.cc\
ast/visitors/utils/processors/export_processor.h\
ast/visitors/utils/processors/import_processor.cc\
ast/visitors/utils/processors/import_processor.h\
ast/visitors/utils/processors/call_processor.cc\
ast/visitors/utils/processors/call_processor.h\
ast/visitors/utils/processors/processor_info.h\
ast/utils/ast_utils.h\
ast/utils/ast_utils.cc\
utils/format.h\
utils/format.cc\
bootstrap/bootstrap.h\
bootstrap/bootstrap.cc\
utils/char_allocator.h\
utils/char_allocator.cc\
ast/visitors/codegen_visitor.h\
ast/visitors/codegen_visitor.cc\
ast/visitors/optimizer_visitor.h\
ast/visitors/optimizer_visitor.cc\
ast/visitors/utils/codewriter.h\
ast/visitors/utils/codewriter.cc\
compiler/compiler.cc\
compiler/compiler.h\
compiler/tokens/symbol_list.h\
compiler/tokens/symbol_list.cc\
compiler/utils/exception_handler.h\
compiler/utils/exception_handler.cc\
bootstrap/runners/compile_runner.h\
bootstrap/runners/compile_runner.cc\
bootstrap/runners/list_runner.h\
bootstrap/runners/list_runner.cc\
bootstrap/runners/error_runner.h\
bootstrap/runners/error_runner.cc\
compiler/utils/compiler_starter.h\
compiler/utils/compiler_starter.cc\
compiler/utils/compiler_utils.h\
compiler/utils/compiler_utils.cc\
options/commandline/commandline_options.h\
options/commandline/commandline_options.cc\
utils/io/file_io.cc\
utils/io/file_io.h\
utils/file_watcher/observer/file_observer.h\
utils/file_watcher/observer/file_observer.cc\
utils/file_system/file_system.cc\
utils/file_system/file_system.h\
utils/file_watcher/file_watcher.h\
utils/file_watcher/file_watcher.cc\
utils/file_system/pwd.cc\
utils/file_system/pwd.h\
utils/smart_pointer/ref_count/handle.h\
bootstrap/runners/help_runner.h\
bootstrap/runners/help_runner.cc\
bootstrap/runners/icommandline_runner.h\
bootstrap/interactions/interaction.h\
bootstrap/interactions/interaction.cc\
bootstrap/interactions/commands.h\
bootstrap/interactions/commands.cc\
bootstrap/interactions/commands_analyzer.h\
bootstrap/interactions/commands_analyzer.cc\
compiler/internal.cc\
compiler/internal.h\
mch/mocha.cc\
mch/mocha.h\
compiler/tokens/js_token.cc\
compiler/tokens/js_token.h\
grammar/location.hh\
mch/main.cc\
utils/pool/managed_handle.h\
utils/pool/managed_handle.cc\
utils/file_system/mkdir.h\
utils/file_system/mkdir.cc\
bootstrap/runners/observer_runner.h\
bootstrap/runners/observer_runner.cc\
compiler/binding/parser_connector.cc\
compiler/binding/parser_connector.h\
compiler/binding/parser_tracer.cc\
compiler/binding/parser_tracer.h\
utils/thread/platform.h\
utils/smart_pointer/common/ptr_deleter.h\
utils/smart_pointer/common/ptr_handle.h\
utils/smart_pointer/common/ptr_handle_base.h\
utils/smart_pointer/common/ptr_traits.h\
compiler/scanner/queue_scanner.h\
compiler/scanner/queue_scanner.cc\
utils/smart_pointer/ref_count/ref_count.h\
utils/smart_pointer/ref_count/ref_count_base.h\
compiler/scopes/scope.cc\
compiler/scopes/scope.h\
utils/smart_pointer/scope/scoped_ptr.h\
utils/smart_pointer/scope/scoped_ptr-impl.h\
utils/smart_pointer/scope/scoped_list.h\
utils/smart_pointer/scope/scoped_list-impl.h\
options/setting.h\
options/setting.cc\
utils/class_traits/static.h\
utils/file_system/stat.h\
utils/file_system/stat.cc\
utils/thread/thread.h\
utils/thread/thread.cc\
tinyxml/tinyxml.h\
tinyxml/tinystr.h\
tinyxml/tinyxml.cpp\
tinyxml/tinystr.cpp\
tinyxml/tinyxmlparser.cpp\
tinyxml/tinyxmlerror.cpp\
compiler/tokens/token_info.cc\
compiler/tokens/token_info.h\
utils/class_traits/uncopyable.h\
utils/file_system/virtual_directory.h\
utils/file_system/virtual_directory.cc\
grammar/grammar.tab.hh\
grammar/grammar.tab.cc\
utils/file_watcher/observer/xml_observer.h\
utils/file_watcher/observer/xml_observer.cc\
utils/xml/versions.h\
utils/xml/versions.cc\
utils/xml/xml_reader.h\
utils/xml/xml_reader.cc\
utils/xml/xml_setting_info.h\
utils/xml/xml_setting_info-inl.h\
utils/xml/xml_setting_info.cc\
compiler/binding/yylex.h


