bin_PROGRAMS = mchd
AM_CFLAGS = -Wall -g -O0 -DHAVE_PTHREAD -DCURRENT_DIR=\"`pwd`\" -fno-exceptions -std=c++0x -std=gnu++0x `icu-config --ldflags`
AM_CXXFLAGS = $(AM_CFLAGS)
mchd_LDFLAGS = $(PTHREAD) -Xlinker -rpath -Xlinker `icu-config --icudata-install-dir` ./third_party/v8/libv8.a
mchd_SOURCES = \
define.h\
unconfig.h\
useconfig.h\
mocha/roaster/ast/ast_foward_decl.h\
mocha/roaster/ast/ast.h\
mocha/roaster/ast/ast.cc\
mocha/roaster/ast/visitors/ast_transformer.cc\
mocha/roaster/ast/visitors/ast_transformer.h\
mocha/roaster/ast/visitors/utils/visitor_info.h\
mocha/roaster/ast/visitors/utils/visitor_info.cc\
mocha/roaster/ast/visitors/utils/processors/array_processor.h\
mocha/roaster/ast/visitors/utils/processors/array_processor.cc\
mocha/roaster/ast/visitors/utils/processors/object_processor.h\
mocha/roaster/ast/visitors/utils/processors/object_processor.cc\
mocha/roaster/ast/visitors/utils/processors/syntax_sugar_processor.h\
mocha/roaster/ast/visitors/utils/processors/syntax_sugar_processor.cc\
mocha/roaster/ast/visitors/utils/processors/dsta_processor.h\
mocha/roaster/ast/visitors/utils/processors/dsta_processor.cc\
mocha/roaster/ast/visitors/utils/processors/iteration_processor.h\
mocha/roaster/ast/visitors/utils/processors/iteration_processor.cc\
mocha/roaster/ast/visitors/utils/processors/variable_processor.h\
mocha/roaster/ast/visitors/utils/processors/variable_processor.cc\
mocha/roaster/ast/visitors/utils/processors/class_processor.cc\
mocha/roaster/ast/visitors/utils/processors/class_processor.h\
mocha/roaster/ast/visitors/utils/processors/function_processor.cc\
mocha/roaster/ast/visitors/utils/processors/function_processor.h\
mocha/roaster/ast/visitors/utils/processors/fileroot_processor.cc\
mocha/roaster/ast/visitors/utils/processors/fileroot_processor.h\
mocha/roaster/ast/visitors/utils/processors/module_processor.cc\
mocha/roaster/ast/visitors/utils/processors/module_processor.h\
mocha/roaster/ast/visitors/utils/processors/export_processor.cc\
mocha/roaster/ast/visitors/utils/processors/export_processor.h\
mocha/roaster/ast/visitors/utils/processors/import_processor.cc\
mocha/roaster/ast/visitors/utils/processors/import_processor.h\
mocha/roaster/ast/visitors/utils/processors/call_processor.cc\
mocha/roaster/ast/visitors/utils/processors/call_processor.h\
mocha/roaster/ast/visitors/utils/processors/trait_processor.cc\
mocha/roaster/ast/visitors/utils/processors/trait_processor.h\
mocha/roaster/ast/visitors/utils/processors/yield_processor.cc\
mocha/roaster/ast/visitors/utils/processors/yield_processor.h\
mocha/roaster/ast/visitors/utils/processors/processor_info.h\
mocha/roaster/ast/visitors/utils/opt/constant_optimizer.h\
mocha/roaster/ast/visitors/utils/opt/constant_optimizer.cc\
mocha/roaster/ast/visitors/utils/opt/ifstatement_optimizer.h\
mocha/roaster/ast/visitors/utils/opt/ifstatement_optimizer.cc\
mocha/roaster/ast/utils/ast_utils.h\
mocha/roaster/ast/utils/ast_utils.cc\
utils/format.h\
utils/format.cc\
bootstrap/bootstrap.h\
bootstrap/bootstrap.cc\
utils/char_allocator.h\
utils/char_allocator.cc\
mocha/roaster/ast/visitors/codegen_visitor.h\
mocha/roaster/ast/visitors/codegen_visitor.cc\
mocha/roaster/ast/visitors/symbol_collector.h\
mocha/roaster/ast/visitors/symbol_collector.cc\
mocha/roaster/ast/visitors/optimizer_visitor.h\
mocha/roaster/ast/visitors/optimizer_visitor.cc\
mocha/roaster/ast/visitors/utils/codewriter.h\
mocha/roaster/ast/visitors/utils/codewriter.cc\
mocha/roaster/compiler.cc\
mocha/roaster/compiler.h\
mocha/roaster/tokens/symbol_list.h\
mocha/roaster/tokens/symbol_list.cc\
mocha/roaster/utils/compile_result.h\
mocha/roaster/utils/compile_result.cc\
mocha/roaster/external/external_resource.h\
mocha/roaster/external/external_resource.cc\
mocha/roaster/utils/compile_info.h\
mocha/roaster/utils/compile_info.cc\
mocha/roaster/consts/consts.h\
mocha/roaster/consts/consts.cc\
mocha/roaster/parser/parser.h\
mocha/roaster/parser/parser.cc\
mocha/roaster/external/external_ast.h\
mocha/roaster/external/external_ast.cc\
bootstrap/runners/compile_runner.h\
bootstrap/runners/compile_runner.cc\
bootstrap/runners/list_runner.h\
bootstrap/runners/list_runner.cc\
bootstrap/runners/error_runner.h\
bootstrap/runners/error_runner.cc\
bootstrap/runners/phantom_runner.h\
bootstrap/runners/phantom_runner.cc\
mocha/roaster/utils/compiler_facade.h\
mocha/roaster/utils/compiler_facade.cc\
mocha/roaster/encoding/encoding.h\
mocha/roaster/encoding/encoding.cc\
mocha/roaster/utils/compiler_utils.h\
mocha/roaster/utils/compiler_utils.cc\
mocha/roaster/utils/error_reporter.h\
mocha/roaster/utils/error_reporter.cc\
options/commandline/commandline_options.h\
options/commandline/commandline_options.cc\
utils/io/file_io.cc\
utils/io/file_io.h\
utils/file_watcher/observer/file_observer.h\
utils/file_watcher/observer/file_observer.cc\
utils/file_system/file_system.cc\
utils/file_system/file_system.h\
utils/file_watcher/file_watcher.h\
utils/file_watcher/file_watcher.cc\
utils/file_system/pwd.cc\
utils/file_system/pwd.h\
utils/file_system/directory.h\
utils/file_system/directory.cc\
utils/smart_pointer/ref_count/handle.h\
bootstrap/runners/help_runner.h\
bootstrap/runners/help_runner.cc\
bootstrap/runners/icommandline_runner.h\
bootstrap/interactions/interaction.h\
bootstrap/interactions/interaction.cc\
bootstrap/interactions/commands.h\
bootstrap/interactions/commands.cc\
bootstrap/interactions/commands_analyzer.h\
bootstrap/interactions/commands_analyzer.cc\
mocha/roaster/internal.cc\
mocha/roaster/internal.h\
mch/mocha.cc\
mch/mocha.h\
mocha/roaster/scanner/token_stream.h\
mocha/roaster/scanner/token_stream.cc\
mocha/roaster/scanner/source_stream.h\
mocha/roaster/scanner/source_stream.cc\
mocha/roaster/scanner/scanner.h\
mocha/roaster/scanner/scanner.cc\
mocha/roaster/tokens/js_token.cc\
mocha/roaster/tokens/js_token.h\
mch/main.cc\
utils/pool/managed_handle.h\
utils/pool/managed_handle.cc\
utils/file_system/mkdir.h\
utils/file_system/mkdir.cc\
bootstrap/runners/observer_runner.h\
bootstrap/runners/observer_runner.cc\
mocha/roaster/binding/parser_connector.cc\
mocha/roaster/binding/parser_connector.h\
mocha/roaster/binding/parser_tracer.cc\
mocha/roaster/binding/parser_tracer.h\
utils/thread/platform.h\
utils/smart_pointer/common/ptr_deleter.h\
utils/smart_pointer/common/ptr_handle.h\
utils/smart_pointer/common/ptr_handle_base.h\
utils/smart_pointer/common/ptr_traits.h\
utils/smart_pointer/ref_count/ref_count.h\
utils/smart_pointer/ref_count/ref_count_base.h\
mocha/roaster/scopes/scope.cc\
mocha/roaster/scopes/scope.h\
utils/smart_pointer/scope/scoped_ptr.h\
utils/smart_pointer/scope/scoped_ptr-impl.h\
utils/smart_pointer/scope/scoped_list.h\
utils/smart_pointer/scope/scoped_list-impl.h\
options/setting.h\
options/setting.cc\
utils/class_traits/static.h\
utils/file_system/stat.h\
utils/file_system/stat.cc\
utils/thread/thread.h\
utils/thread/thread.cc\
tinyxml/tinyxml.h\
tinyxml/tinystr.h\
tinyxml/tinyxml.cpp\
tinyxml/tinystr.cpp\
tinyxml/tinyxmlparser.cpp\
tinyxml/tinyxmlerror.cpp\
mocha/roaster/tokens/token_info.cc\
mocha/roaster/tokens/token_info.h\
utils/class_traits/uncopyable.h\
utils/file_system/virtual_directory.h\
utils/file_system/virtual_directory.cc\
utils/file_watcher/observer/xml_observer.h\
utils/file_watcher/observer/xml_observer.cc\
utils/xml/versions.h\
utils/xml/versions.cc\
utils/xml/xml_reader.h\
utils/xml/xml_reader.cc\
utils/xml/xml_setting_info.h\
utils/xml/xml_setting_info-inl.h\
utils/xml/xml_setting_info.cc


