bin_PROGRAMS = mchd
AM_CFLAGS = -Wall -g -O0 -DHAVE_PTHREAD -DBOOST_NO_TYPEID -DBOOST_NO_EXCEPTIONS -DCURRENT_DIR=\"`pwd`\" -fno-exceptions -std=c++0x -std=gnu++0x `icu-config --ldflags`
AM_CXXFLAGS = $(AM_CFLAGS)
mchd_LDFLAGS = $(PTHREAD) -Xlinker -rpath -Xlinker `icu-config --icudata-install-dir` ./third_party/v8/libv8.a
mchd_SOURCES = \
define.h\
unconfig.h\
useconfig.h\
mocha/roaster/ast/ast_foward_decl.h\
mocha/roaster/ast/ast.h\
mocha/roaster/ast/ast.cc\
mocha/roaster/ast/visitors/ast_transformer.cc\
mocha/roaster/ast/visitors/ast_transformer.h\
mocha/roaster/ast/visitors/utils/visitor_info.h\
mocha/roaster/ast/visitors/utils/visitor_info.cc\
mocha/roaster/ast/visitors/utils/processors/array_processor.h\
mocha/roaster/ast/visitors/utils/processors/array_processor.cc\
mocha/roaster/ast/visitors/utils/processors/object_processor.h\
mocha/roaster/ast/visitors/utils/processors/object_processor.cc\
mocha/roaster/ast/visitors/utils/processors/syntax_sugar_processor.h\
mocha/roaster/ast/visitors/utils/processors/syntax_sugar_processor.cc\
mocha/roaster/ast/visitors/utils/processors/dsta_processor.h\
mocha/roaster/ast/visitors/utils/processors/dsta_processor.cc\
mocha/roaster/ast/visitors/utils/processors/iteration_processor.h\
mocha/roaster/ast/visitors/utils/processors/iteration_processor.cc\
mocha/roaster/ast/visitors/utils/processors/variable_processor.h\
mocha/roaster/ast/visitors/utils/processors/variable_processor.cc\
mocha/roaster/ast/visitors/utils/processors/class_processor.cc\
mocha/roaster/ast/visitors/utils/processors/class_processor.h\
mocha/roaster/ast/visitors/utils/processors/function_processor.cc\
mocha/roaster/ast/visitors/utils/processors/function_processor.h\
mocha/roaster/ast/visitors/utils/processors/fileroot_processor.cc\
mocha/roaster/ast/visitors/utils/processors/fileroot_processor.h\
mocha/roaster/ast/visitors/utils/processors/module_processor.cc\
mocha/roaster/ast/visitors/utils/processors/module_processor.h\
mocha/roaster/ast/visitors/utils/processors/export_processor.cc\
mocha/roaster/ast/visitors/utils/processors/export_processor.h\
mocha/roaster/ast/visitors/utils/processors/import_processor.cc\
mocha/roaster/ast/visitors/utils/processors/import_processor.h\
mocha/roaster/ast/visitors/utils/processors/call_processor.cc\
mocha/roaster/ast/visitors/utils/processors/call_processor.h\
mocha/roaster/ast/visitors/utils/processors/trait_processor.cc\
mocha/roaster/ast/visitors/utils/processors/trait_processor.h\
mocha/roaster/ast/visitors/utils/processors/yield_processor.cc\
mocha/roaster/ast/visitors/utils/processors/yield_processor.h\
mocha/roaster/ast/visitors/utils/processors/processor_info.h\
mocha/roaster/ast/visitors/utils/opt/constant_optimizer.h\
mocha/roaster/ast/visitors/utils/opt/constant_optimizer.cc\
mocha/roaster/ast/visitors/utils/opt/ifstatement_optimizer.h\
mocha/roaster/ast/visitors/utils/opt/ifstatement_optimizer.cc\
mocha/roaster/runtime/runtime.h\
mocha/roaster/runtime/runtime.cc\
mocha/roaster/ast/builder/ast_builder.cc\
mocha/roaster/ast/builder/ast_builder.h\
mocha/bootstrap/bootstrap.h\
mocha/bootstrap/bootstrap.cc\
mocha/misc/char_allocator.h\
mocha/misc/char_allocator.cc\
mocha/roaster/ast/visitors/codegen_visitor.h\
mocha/roaster/ast/visitors/codegen_visitor.cc\
mocha/roaster/ast/visitors/symbol_collector.h\
mocha/roaster/ast/visitors/symbol_collector.cc\
mocha/roaster/ast/visitors/optimizer_visitor.h\
mocha/roaster/ast/visitors/optimizer_visitor.cc\
mocha/roaster/ast/visitors/utils/codewriter.h\
mocha/roaster/ast/visitors/utils/codewriter.cc\
mocha/roaster/compiler.cc\
mocha/roaster/compiler.h\
mocha/roaster/tokens/symbol_list.h\
mocha/roaster/tokens/symbol_list.cc\
mocha/roaster/utils/compile_result.h\
mocha/roaster/utils/compile_result.cc\
mocha/roaster/external/external_resource.h\
mocha/roaster/external/external_resource.cc\
mocha/roaster/utils/compile_info.h\
mocha/roaster/utils/compile_info.cc\
mocha/roaster/consts/consts.h\
mocha/roaster/consts/consts.cc\
mocha/roaster/parser/parser.h\
mocha/roaster/parser/parser.cc\
mocha/roaster/external/external_ast.h\
mocha/roaster/external/external_ast.cc\
mocha/roaster/memory/pool.h\
mocha/roaster/memory/pool.cc\
mocha/bootstrap/runners/compile_runner.h\
mocha/bootstrap/runners/compile_runner.cc\
mocha/bootstrap/runners/list_runner.h\
mocha/bootstrap/runners/list_runner.cc\
mocha/bootstrap/runners/error_runner.h\
mocha/bootstrap/runners/error_runner.cc\
mocha/bootstrap/runners/phantom_runner.h\
mocha/bootstrap/runners/phantom_runner.cc\
mocha/roaster/encoding/encoding.h\
mocha/roaster/encoding/encoding.cc\
mocha/roaster/utils/compiler_utils.h\
mocha/roaster/utils/compiler_utils.cc\
mocha/roaster/utils/error_reporter.h\
mocha/roaster/utils/error_reporter.cc\
mocha/options/commandline/commandline_options.h\
mocha/options/commandline/commandline_options.cc\
mocha/roaster/misc/io/file_io.cc\
mocha/roaster/misc/io/file_io.h\
mocha/misc/file_watcher/observer/file_observer.h\
mocha/misc/file_watcher/observer/file_observer.cc\
mocha/roaster/file_system/file_system.cc\
mocha/roaster/file_system/file_system.h\
mocha/misc/file_watcher/file_watcher.h\
mocha/misc/file_watcher/file_watcher.cc\
mocha/roaster/file_system/pwd.cc\
mocha/roaster/file_system/pwd.h\
mocha/roaster/file_system/directory.h\
mocha/roaster/file_system/directory.cc\
mocha/misc/smart_pointer/ref_count/handle.h\
mocha/bootstrap/runners/help_runner.h\
mocha/bootstrap/runners/help_runner.cc\
mocha/bootstrap/runners/icommandline_runner.h\
mocha/bootstrap/interactions/interaction.h\
mocha/bootstrap/interactions/interaction.cc\
mocha/bootstrap/interactions/commands.h\
mocha/bootstrap/interactions/commands.cc\
mocha/bootstrap/interactions/commands_analyzer.h\
mocha/bootstrap/interactions/commands_analyzer.cc\
mocha/roaster/internal.cc\
mocha/roaster/internal.h\
mocha/roaster/scanner/token_stream.h\
mocha/roaster/scanner/token_stream.cc\
mocha/roaster/scanner/source_stream.h\
mocha/roaster/scanner/source_stream.cc\
mocha/misc/file_writer.h\
mocha/misc/file_writer.cc\
mocha/roaster/scanner/scanner.h\
mocha/roaster/scanner/scanner.cc\
mocha/roaster/tokens/js_token.cc\
mocha/roaster/tokens/js_token.h\
mocha/main.cc\
mocha/roaster/file_system/mkdir.h\
mocha/roaster/file_system/mkdir.cc\
mocha/bootstrap/runners/observer_runner.h\
mocha/bootstrap/runners/observer_runner.cc\
mocha/roaster/binding/parser_connector.cc\
mocha/roaster/binding/parser_connector.h\
mocha/roaster/misc/thread/platform.h\
mocha/misc/smart_pointer/common/ptr_deleter.h\
mocha/misc/smart_pointer/common/ptr_handle.h\
mocha/misc/smart_pointer/common/ptr_handle_base.h\
mocha/misc/smart_pointer/common/ptr_traits.h\
mocha/misc/smart_pointer/ref_count/ref_count.h\
mocha/misc/smart_pointer/ref_count/ref_count_base.h\
mocha/roaster/scopes/scope.cc\
mocha/roaster/scopes/scope.h\
mocha/misc/smart_pointer/scope/scoped_ptr.h\
mocha/misc/smart_pointer/scope/scoped_ptr-impl.h\
mocha/misc/smart_pointer/scope/scoped_list.h\
mocha/misc/smart_pointer/scope/scoped_list-impl.h\
mocha/options/setting.h\
mocha/options/setting.cc\
mocha/misc/class_traits/static.h\
mocha/roaster/file_system/stat.h\
mocha/roaster/file_system/stat.cc\
mocha/roaster/misc/thread/thread.h\
mocha/roaster/misc/thread/thread.cc\
mocha/roaster/roaster.h\
mocha/roaster/roaster.cc\
third_party/tinyxml/tinyxml.h\
third_party/tinyxml/tinystr.h\
third_party/tinyxml/tinyxml.cpp\
third_party/tinyxml/tinystr.cpp\
third_party/tinyxml/tinyxmlparser.cpp\
third_party/tinyxml/tinyxmlerror.cpp\
mocha/roaster/tokens/token_info.cc\
mocha/roaster/tokens/token_info.h\
mocha/misc/class_traits/uncopyable.h\
mocha/roaster/file_system/virtual_directory.h\
mocha/roaster/file_system/virtual_directory.cc\
mocha/misc/file_watcher/observer/xml_observer.h\
mocha/misc/file_watcher/observer/xml_observer.cc\
mocha/misc/xml/versions.h\
mocha/misc/xml/versions.cc\
mocha/misc/xml/xml_reader.h\
mocha/misc/xml/xml_reader.cc\
mocha/misc/xml/xml_setting_info.h\
mocha/misc/xml/xml_setting_info-inl.h\
mocha/misc/xml/xml_setting_info.cc


